--- a/views/shared/header.ejs
+++ b/views/shared/header.ejs
@@ -12,7 +12,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <script src=https://cdn.jsdelivr.net/npm/pretty-print-json@0.2/dist/pretty-print-json.min.js></script>
   <!--PayPal JS SDK HERE -->
-  <script src="https://www.paypal.com/sdk/js?client-id=AUgLB9G4JPQLSWJ37tqGofpy7s2ObU3fKRL7faCGXzl_wYNBRX0dqUJYeAfXb18ocmU4uzlCl5nECjn2&currency=EUR&intent=order&commit=false&vault=true"></script>
+  <script src="https://www.paypal.com/sdk/js?client-id=AUgLB9G4JPQLSWJ37tqGofpy7s2ObU3fKRL7faCGXzl_wYNBRX0dqUJYeAfXb18ocmU4uzlCl5nECjn2"></script>
 </head>
 
 <body>
